# API_Atletas

./: alembic.ini  docker-compose.yml  makefile  pyproject.toml  requirements.txt
alembic/: env.py
src/api_atletas/: main.py  models.py  schemas.py
src/api_atletas/Centro_de_treinamento/: models.py  schemas.py
src/api_atletas/atletas/: models.py  schemas.py
src/api_atletas/categorias/: models.py  schemas.py
src/api_atletas/contrib/: mapper.py  schemas.py
